# photo_anonymization

./: .gitignore  README.md  pyproject.toml
designdoc/: ML_System_Design_Doc.md
telegram_bot/: telegram_bot.py  transforms.py
telegram_bot/models/: .gitignore
telegram_bot/notebooks/: .gitignore  yolo_experiments.ipynb
