[tool.poetry]
name = "photo-anonymization"
version = "0.1.0"
description = ""
authors = ["bazilyq <bazilyqq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
pytelegrambotapi = "^4.14.0"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
ipykernel = "^6.27.1"
tqdm = "^4.66.1"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
